--- a/argilasfaciais.html
+++ b/argilasfaciais.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br"> 
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ARGILAS FACIAIS</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
+       <h1 align="center"> ARGILAS FACIAIS</h1>
 <img src="argilass.webp">
-<h1>utilidade das argilas faciais</h1>
- as funções das <strong>ARGILAS FACIAIS</strong> podem ser muitas, utilizadas para o auto cuidado o uso delas tem ficado cada vez mais frequentes depois da pandemia, cada cor tem uma função como por exemplo a argila branca, essa argila é usada para eliminar toxinas, clarear, auxiliar na regeneração celular e entre outras funções.<p>Deve-se retirar a argila do rosto antes que ela seque totalmente e cause o ressecamento da pele.</p>
+<h2>PROPRIEDADES</h2>
+ <h5> funções das <strong>ARGILAS FACIAIS</strong> podem ser muitas, utilizadas para o auto cuidado
+ o uso delas tem ficado cada vez mais frequentes depois da pandemia, cada cor tem uma função como
+  por exemplo a argila branca, essa argila é usada para eliminar toxinas, clarear, auxiliar na 
+  regeneração celular e entre outras funções.</h5>
+       <h2>Como aplicar argila no rosto</h2>
+       1.Preparação= comece com a pele limpa,seca e sem maquiagem.
 
 </body>
 </html>
