--- a/argilasfaciais.html
+++ b/argilasfaciais.html
@@ -15,7 +15,21 @@
   por exemplo a argila branca, essa argila é usada para eliminar toxinas, clarear, auxiliar na 
   regeneração celular e entre outras funções.</h5>
        <h2>Como aplicar argila no rosto</h2>
-       1.Preparação= comece com a pele limpa,seca e sem maquiagem.
+       <ol>
+       <li>Preparação= comece com a pele limpa,seca e sem maquiagem.</li>
+       <li>Como potencializar:Coloque uma toalha morna no rosto por alguns minutos para ajudar a abrir os poros da pele.</li>
+       <li>Mistura:Use água ou chá de camomila para fazer a mistura e a consistência deverá ficar igual a uma pasta.</li>
+       <li>Cuidados:A argila em si é um produto natural,porém evite passar na areá dos olhos e lábios.</li>
+       <li>Retirar:Após a aplicação da argila, espere secar e retire com água massageando seu rosto.</li>
+       <li>Descansar:Após a retirada da argila, evite passar qualquer produto na pele(creme,hidratante,mauiagem,etc...)por cerca de 2 a 3 horas. </li>
+              Guia completo de argilas e seus benefícios.
+              Argila verde:É recomendada para peles oleosas.
+              •Tonificante    
+              •Secativa 
+              •Adstringente
+                  
+
+
 
 </body>
 </html>
