--- a/argilasfaciais.html
+++ b/argilasfaciais.html
@@ -22,12 +22,36 @@
        <li>Cuidados:A argila em si é um produto natural,porém evite passar na areá dos olhos e lábios.</li>
        <li>Retirar:Após a aplicação da argila, espere secar e retire com água massageando seu rosto.</li>
        <li>Descansar:Após a retirada da argila, evite passar qualquer produto na pele(creme,hidratante,mauiagem,etc...)por cerca de 2 a 3 horas. </li>
-              Guia completo de argilas e seus benefícios.
-              Argila verde:É recomendada para peles oleosas.
+       </ol>
+       <h2>Guia completo de argilas e seus benefícios.</h2>
+<ul>
+              <li>Argila verde:É recomendada para peles oleosas.
               •Tonificante    
               •Secativa 
               •Adstringente
-                  
+              •Cicatrizante</li>
+       </li>Argila rosa:Para peles sensíveis e secas.   
+              •Hidratante
+              •Antioxidante
+              •Calmante </li>
+       </li>Argila branca:Acalma peles sensíveis.
+              •Clareadora
+              •Cicatrizante 
+              •Hidratante</li> 
+       </li>Argila amarela:Auxilia na elasticidade da pele.
+              •Hidratante 
+              •Adstringente</li>
+              Argila vermelha:Ajuda muito na elsticidade da pele.
+              •Controla a oleosidade
+              •Suaviza as linhas expressão
+              •Renova as células
+              Argila preta:Para desintoxicação da pele.
+               Desintoxicante
+               •Antiestresse
+               •Absorvente
+               •Anti-inflamatória
+</ul>
+
 
 
 
