--- a/argilasfaciais.html
+++ b/argilasfaciais.html
@@ -34,22 +34,22 @@
               •Hidratante
               •Antioxidante
               •Calmante </li>
-       </li>Argila branca:Acalma peles sensíveis.
-              •Clareadora
-              •Cicatrizante 
-              •Hidratante</li> 
-       </li>Argila amarela:Auxilia na elasticidade da pele.
-              •Hidratante 
-              •Adstringente</li>
-              Argila vermelha:Ajuda muito na elsticidade da pele.
-              •Controla a oleosidade
-              •Suaviza as linhas expressão
-              •Renova as células
-              Argila preta:Para desintoxicação da pele.
-               Desintoxicante
-               •Antiestresse
-               •Absorvente
-               •Anti-inflamatória
+       </li>Argila branca:Acalma peles sensíveis.</li>
+        </li> •Clareadora</li>
+         </li>•Cicatrizante 
+        </li> •Hidratante</li> 
+       </li>Argila amarela:Auxilia na elasticidade da pele.</li>
+         </li>•Hidratante 
+        </li> •Adstringente</li>
+        </li> Argila vermelha:Ajuda muito na elsticidade da pele.</li>
+        </li> •Controla a oleosidade</li>
+        </li> •Suaviza as linhas expressão</li>
+        </li> •Renova as células</li>
+         </li>Argila preta:Para desintoxicação da pele.</li>
+         </li>•Desintoxicante</li>
+         </li>•Antiestresse</li>
+         </li>•Absorvente</li>
+         </li>•Anti-inflamatória</li>
 </ul>
 
 
