--- a/argilasfaciais.html
+++ b/argilasfaciais.html
@@ -24,32 +24,34 @@
        <li>Descansar:Após a retirada da argila, evite passar qualquer produto na pele(creme,hidratante,mauiagem,etc...)por cerca de 2 a 3 horas. </li>
        </ol>
        <h2>Guia completo de argilas e seus benefícios.</h2>
-<ul>
-              <li>Argila verde:É recomendada para peles oleosas.
-              •Tonificante    
-              •Secativa 
-              •Adstringente
-              •Cicatrizante</li>
-       </li>Argila rosa:Para peles sensíveis e secas.   
-              •Hidratante
-              •Antioxidante
-              •Calmante </li>
-       </li>Argila branca:Acalma peles sensíveis.</li>
-        </li> •Clareadora</li>
-         </li>•Cicatrizante 
-        </li> •Hidratante</li> 
-       </li>Argila amarela:Auxilia na elasticidade da pele.</li>
-         </li>•Hidratante 
-        </li> •Adstringente</li>
-        </li> Argila vermelha:Ajuda muito na elsticidade da pele.</li>
-        </li> •Controla a oleosidade</li>
-        </li> •Suaviza as linhas expressão</li>
-        </li> •Renova as células</li>
-         </li>Argila preta:Para desintoxicação da pele.</li>
-         </li>•Desintoxicante</li>
-         </li>•Antiestresse</li>
-         </li>•Absorvente</li>
-         </li>•Anti-inflamatória</li>
+
+              <p><b>Argila verde:É recomendada para peles oleosas.</b></p>
+              <ul>
+              <li>•Tonificante</li>    
+              <li>•Secativa</li>
+              <li>•Adstringente</li>
+              <li>•Cicatrizante</li>
+       </ul>
+       <li>Argila rosa:Para peles sensíveis e secas.</li>   
+              <li>•Hidratante</li>
+              <li>•Antioxidante</li>
+              <li>•Calmante </li>
+       <li>Argila branca:Acalma peles sensíveis.</li>
+        <li> •Clareadora</li>
+         <li>•Cicatrizante</li>
+        <li> •Hidratante</li> 
+       <li>Argila amarela:Auxilia na elasticidade da pele.</li>
+         <li>•Hidratante </li>
+        <li> •Adstringente</li>
+        <li> Argila vermelha:Ajuda muito na elsticidade da pele.</li>
+        <li> •Controla a oleosidade</li>
+        <li> •Suaviza as linhas expressão</li>
+        <li> •Renova as células</li>
+         <li>Argila preta:Para desintoxicação da pele.</li>
+         <li>•Desintoxicante</li>
+         <li>•Antiestresse</li>
+         <li>•Absorvente</li>
+         <li>•Anti-inflamatória</li>
 </ul>
 
 
