--- a/argilasfaciais.html
+++ b/argilasfaciais.html
@@ -25,9 +25,9 @@
        </ol>
        <h2>Guia completo de argilas e seus benefícios.</h2>
 
-              <p><b>Argila verde:É recomendada para peles oleosas.</b></p>
+              <p align="center"><b>Argila verde:É recomendada para peles oleosas.</b></p>
               <ul>
-              <li>•Tonificante</li>    
+              <li>Tonificante</li>    
               <li>•Secativa</li>
               <li>•Adstringente</li>
               <li>•Cicatrizante</li>
