--- a/argilasfaciais.html
+++ b/argilasfaciais.html
@@ -28,31 +28,40 @@
               <p align="center"><b>Argila verde:É recomendada para peles oleosas.</b></p>
               <ul>
               <li>Tonificante</li>    
-              <li>•Secativa</li>
-              <li>•Adstringente</li>
-              <li>•Cicatrizante</li>
+              <li>Secativa</li>
+              <li>Adstringente</li>
+              <li>Cicatrizante</li>
        </ul>
-       <li>Argila rosa:Para peles sensíveis e secas.</li>   
-              <li>•Hidratante</li>
+       <h2>Argila rosa:Para peles sensíveis e secas.</h2>
+       <ul> 
+              <li>Hidratante</li>
               <li>•Antioxidante</li>
               <li>•Calmante </li>
-       <li>Argila branca:Acalma peles sensíveis.</li>
-        <li> •Clareadora</li>
-         <li>•Cicatrizante</li>
-        <li> •Hidratante</li> 
-       <li>Argila amarela:Auxilia na elasticidade da pele.</li>
-         <li>•Hidratante </li>
-        <li> •Adstringente</li>
-        <li> Argila vermelha:Ajuda muito na elsticidade da pele.</li>
-        <li> •Controla a oleosidade</li>
-        <li> •Suaviza as linhas expressão</li>
-        <li> •Renova as células</li>
-         <li>Argila preta:Para desintoxicação da pele.</li>
-         <li>•Desintoxicante</li>
-         <li>•Antiestresse</li>
-         <li>•Absorvente</li>
-         <li>•Anti-inflamatória</li>
-</ul>
+              </ul>
+       <h2>Argila branca:Acalma peles sensíveis.</h2>
+       <ul>
+        <li> Clareadora</li>
+         <li>Cicatrizante</li>
+        <li> Hidratante</li> 
+       </ul>
+       <h2>Argila amarela:Auxilia na elasticidade da pele.</h2>
+       <ul>
+         <li>Hidratante </li>
+        <li> Adstringente</li>
+       </ul>
+        <h2> Argila vermelha:Ajuda muito na elsticidade da pele.</h2>
+        <ul>
+        <li> Controla a oleosidade</li>
+        <li> Suaviza as linhas expressão</li>
+        <li> Renova as células</li>
+       </ul>
+         <h2>Argila preta:Para desintoxicação da pele.</h2>
+         <ul>
+         <li>Desintoxicante</li>
+         <li>Antiestresse</li>
+         <li>Absorvente</li>
+         <li>Anti-inflamatória</li>
+       </ul>
 
 
 
