--- a/argilasfaciais.html
+++ b/argilasfaciais.html
@@ -24,7 +24,7 @@
        <li>Descansar:Após a retirada da argila, evite passar qualquer produto na pele(creme,hidratante,mauiagem,etc...)por cerca de 2 a 3 horas. </li>
        </ol>
        <h2>Guia completo de argilas e seus benefícios.</h2>
- <p align="center"><b>Argila verde:É recomendada para peles oleosas.</b></p></ul>
+ <p align><b>Argila verde:É recomendada para peles oleosas.</b></p></ul>
               <li>Tonificante</li>    
               <li>Secativa</li>
               <li>Adstringente</li>
